--- a/styles/style.css
+++ b/styles/style.css
@@ -261,7 +261,7 @@ ol {
   display: block;
   text-decoration: none;
   color: #fff;
-  padding: 2px;
+  margin: 2px;
 }
 
 .content__card-link:hover {
